Keep with resources's endpoints completition: Deudas and Reglas
