# server/api/controllers/deudas/router.ts
@@ -4,7 +4,9 @@ import catchErrors from '../../../common/helpers/errorCatcher';
 
 const router = Router({ mergeParams: true });
 
-router.get('/', deudasController.getAll);
-router.post('/', catchErrors(deudasController.create));
+router.get('/', catchErrors(deudasController.getAll))
+      .post('/', catchErrors(deudasController.create))
+      .patch('/:deuda', catchErrors(deudasController.update))
+      .delete('/:deuda', catchErrors(deudasController.delete))
 
 export default router;
