# server/api/controllers/reglas/router.ts
@@ -6,7 +6,10 @@ const router = Router({ mergeParams: true });
 
 router
   .get('/', reglasController.getAll)
-  // .get('/:regla', reglasController.getById)
   .post('/', catchErrors(reglasController.create))
+  .patch('/:regla', catchErrors(reglasController.update))
+  // TODO: Dejar comentado hasta definir qué hacer con las deudas que tienen una regla asociada.
+  //       Por ahora la mejor solución es tener una propiead "activa" en lugar de permitir que se elimine.
+  // .delete('/:regla', catchErrors(reglasController.delete))
 
 export default router;
